changed the color of the burger, fixed the logo, the image behind the burger no longer protrudes, the font color on the burger icon has been set to the primary-color variable

--- a/style.css
+++ b/style.css
@@ -102,12 +102,13 @@ body {
   list-style: none;
   text-align: center;
   width: 100%;
-  margin-top: 3.5rem;
+  margin-top: 4rem;
+  margin-bottom: 2rem;
   font-family: var(--title-font);
 }
 
 .item {
-  margin: 2rem;
+  margin: 1rem;
   font-size: 2rem;
 }
 
